--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -7,6 +7,8 @@
   <groupId>com.discrod.receipt</groupId>
   <artifactId>tracker</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
+
 
   <name>tracker</name>
 
@@ -51,8 +53,24 @@
         <version>4.1</version> 
     </dependency> 
 
-</dependencies>
-
+  </dependencies>
+  <build>
+      <plugins>
+          <plugin>
+              <artifactId>maven-assembly-plugin</artifactId>
+              <configuration>
+                  <archive>
+                      <manifest>
+                          <mainClass>com.world_war_z.angel_flores.App</mainClass>
+                      </manifest>
+                  </archive>
+                  <descriptorRefs>
+                      <descriptorRef>jar-with-dependencies</descriptorRef>
+                  </descriptorRefs>
+              </configuration>
+          </plugin>
+      </plugins>
+  </build>
 
 
 
