--- a/tracker/pom.xml
+++ b/tracker/pom.xml
@@ -51,7 +51,12 @@
         <groupId>com.opencsv</groupId> 
         <artifactId>opencsv</artifactId> 
         <version>4.1</version> 
-    </dependency> 
+    </dependency>
+  <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>3.2.4</version>
+  </dependency>
 
   </dependencies>
   <build>
